--- a/_includes/left.html
+++ b/_includes/left.html
@@ -62,7 +62,7 @@
   
   <div class="pan-layout-left__bottom">
     <div class="pan-layout-left__small">
-      <span>GET IN TOUCH</span>
+      <span>Code Repository</span>
     </div>
     <div class="pan-layout-left__social">
       {% if site.social_icons %}
